<resources>
    <string name="app_name">Bangkit Capstone Projects</string>
    <string name="our">Our</string>
    <string name="foods">Foods</string>
    <string name="dashboard">Dashboard</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="phone">08322323</string>
    <string name="tangan">Our</string>
    <string name="diatas">Foods</string>
    <string name="make_your_event">Make Your Event</string>
    <string name="event_title">Event Title</string>
    <string name="description_event">Description Event</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="login_gmail">Login with G-Mail</string>
    <string name="event_desription">Event Desription</string>
    <string name="target_money">Target Money (IDR)</string>
    <string name="target_people">Target People (Person) :</string>
    <string name="event_date">Event Date</string>
    <string name="date">26-07-2018</string>
    <string name="choose_image_for_poster">Choose Image For Poster</string>
    <string name="target_food">Target Food (Portion)</string>
    <string name="poster">Select Your Image for Poster</string>
    <string name="username_detail">Username,</string>
    <string name="donate_food">Donate Food</string>
    <string name="donate">Donate</string>
    <string name="donate_money">Donate Money</string>
    <string name="donate_time">Donate Time</string>
    <string name="target_food_portion">Target Food (Portion) :</string>
    <string name="_1000">1000</string>
    <string name="target_money_idr">Target Money (IDR) :</string>
    <string name="target_people_person">Target People (Person) : -</string>
    <string name="id_event">ID Event</string>
    <string name="transfer">Donations can be paid through our e-money account or wallet dompet</string>
    <string name="bca">BCA 836 992 832 01 00 a/n Our Foods</string>
    <string name="dana">DANA 0821 4829 2532 a/n Our Foods</string>
    <string name="ovo">OVO 0821 4829 2532 a/n Our Foods</string>
    <string name="send_food">Donated food will be picked up by the team or can be sent via gojek/grab or can be delivered to the event committee by yourself</string>
    <string name="select_your_image_food">Select Your Image Food</string>
    <string name="select_your_evidence_of_transfer">Select Your Evidence of Transfer</string>
    <string name="donate_food_portion">Donate Food (Portion) :</string>
    <string name="donate_money_idr">Donate Money (IDR) :</string>
    <string name="check">Check</string>
    <string name="your_event">Your Event</string>
</resources>