<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_money"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.MoneyFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_money_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_money_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/donate_money_idr"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_transfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transfer"
                android:textColor="@color/dark_brown"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_money_layout" />

            <TextView
                android:id="@+id/tv_bca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bca"
                android:textColor="@color/dark_brown"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_transfer" />

            <TextView
                android:id="@+id/tv_dana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dana"
                android:textColor="@color/dark_brown"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bca" />

            <TextView
                android:id="@+id/tv_ovo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ovo"
                android:textColor="@color/dark_brown"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_dana" />

            <TextView
                android:id="@+id/tv_select_image_transfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_your_evidence_of_transfer"
                android:textColor="@color/dark_brown"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ovo" />

            <ImageButton
                android:id="@+id/btn_image_transfer"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/poster_image"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_select_image_transfer" />

            <Button
                android:id="@+id/btn_donate_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_brown"
                android:text="@string/donate"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_image_transfer" />

            <TextView
                android:id="@+id/tv_id_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_event"
                android:visibility="invisible"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_donate_money"/>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_mail"
                android:visibility="invisible"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_id_event" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>